SERVER-55388 Bring back ShardingLogging calls to the drop collection